icones perform and popup

--- a/src/angular/map/map.html
+++ b/src/angular/map/map.html
@@ -15,10 +15,9 @@
 			coords="'coords'" 
 			icon="'icon'" 
 			click="poiClicked" 
-			dorebuildall="true" 
 			labelContent="'work'"
         	labelVisible="true"
-        	events="'events'"></ui-gmap-markers>
+        	events="mouseEventsObject"></ui-gmap-markers>
 
         <ui-gmap-search-box
         template="searchbox.template"
