--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,6 +38,10 @@
     <script src="../../src/angular/util/utilStringService.js"></script>
     <script src="../../src/angular/util/utilGeoService.js"></script>
     <!-- EOF angular utils -->
+
+    <!-- BOF angular filters -->
+    <script src="../../src/angular/filters/viewableHtmlFilter.js"></script>
+    <!-- EOF angular filters -->
     
     <!-- BOF angular app -->
 
@@ -51,10 +55,17 @@
     <script src="../../src/angular/map/mapService.js"></script>
     <!-- EOF map -->
 
-     <!-- BOF poi -->
+    <!-- BOF poiInfo -->
     <script src="../../src/angular/poiInfo/poiInfoController.js"></script>
     <script src="../../src/angular/poiInfo/poiInfoService.js"></script>
-    <!-- EOF poi -->
+    <!-- EOF poiInfo -->
+
+    <!-- BOF iGo -->
+    <script src="../../src/angular/iGo/iGoController.js"></script>
+    <script src="../../src/angular/iGo/iGoService.js"></script>
+    <!-- EOF iGo -->
+
+
 
     <!-- EOF Angular APP -->
 
