--- a/src/angular/navigation/navigation.html
+++ b/src/angular/navigation/navigation.html
@@ -7,9 +7,7 @@
 			<div class="btn-group" role="group">
 				<button type="button" class="btn" ng-click="btnSleepClicked()" ng-class="{'btn-info': poisSleepDisplayed, 'btn-default': !poisSleepDisplayed}">Où dormir</button>
 			</div>
-			<div class="btn-group" role="group">
-				<button type="button" class="btn btn-default" ng-click="btnIGoClicked()"><b>Je viens !</b></button>
-			</div>
 		</div>
 	</div>
 </nav>
+<a ng-href="index.html#/home" class="btn btn-default btn-back-home"><i class="fa fa-home"></i><b> Retour accueil</b></a>
