--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,7 @@
     <!-- CSS -->
     <link href="../css/main.css" rel="stylesheet">
     <link href="../css/icons.css" rel="stylesheet">
+    <link href="../font/dance_with_me_tata/stylesheet.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- BOF Angular APP -->
@@ -44,6 +45,11 @@
     <!-- EOF angular filters -->
     
     <!-- BOF angular app -->
+
+    <!-- BOF home -->
+    <script src="../../src/angular/home/homeController.js"></script>
+    <script src="../../src/angular/home/homeService.js"></script>
+    <!-- EOF home -->
 
     <!-- BOF navigation -->
     <script src="../../src/angular/navigation/navigationController.js"></script>
