mobile bug + titre en vrai (pas img)

--- a/src/angular/home/home.html
+++ b/src/angular/home/home.html
@@ -1,13 +1,16 @@
 <div id="home" class="container-fluid">
 	<div class="home-header"></div>
-	<img class="image-helene-flo" src="../img/home/helene-flo.png">
+	<div class="intro-helene-flo">
+		<p> Hélène et Florent </p>
+		<p> 25 juin 2016 <p>
+	</div>
 	<div class="row" ng-show="!showIGoForm">
 	  <div class="col-md-3"></div>
 	  <div class="col-md-4"></div>
 	  <div class="col-md-2">
-  		<img class="image-fleche image-fleche-haut-bas" src="../img/home/fleche-haut-bas.png">
+  		<img class="image-fleche image-fleche-haut-bas only-big-screen" src="../img/home/fleche-haut-bas.png">
 	  </div>
-  	  <div class="col-md-3 info-for-btn">Cliquez ici pour nous avertir <br> de votre présence ou absence.</div>		
+  	  <div class="col-md-3 info-for-btn">Par ici, pour nous avertir <br> de votre présence ou absence.</div>		
 	</div>
 	<div class="row" ng-show="!showIGoForm">
 	  <div class="col-md-3"></div>
@@ -15,19 +18,20 @@
 	  	<a class="btn btn-default btn-home" ng-href="index.html#/map">La carte </a>
 	  </div>
 	  <div class="col-md-3">
-	  	<button class="btn btn-default btn-home" ng-click="iGoClicked()">Je viens !</button>
+	  	<button class="btn btn-default btn-home only-big-screen" ng-click="iGoClicked()">Je viens !</button>
+	  	<a class="btn btn-default btn-home only-minor-screen" target="_new" ng-href="https://docs.google.com/forms/d/1tLU0hz_obDyYlK2CX8Ee-_tOLUwbovEeFLlUJIcnyW8/viewform">Je viens !</a>
 	  </div>
 	  <div class="col-md-3"></div>
 	</div>
 	<div class="row" ng-show="!showIGoForm">
-	  <div class="col-md-3 info-for-btn">Cliquez ici pour obtenir toutes les informations <br> concernant la journée, l'hébergement ...</div>
-	  <div class="col-md-2"><img class="image-fleche image-fleche-bas-haut" src="../img/home/fleche-bas-haut-grande.png"></div>
+	  <div class="col-md-3 info-for-btn">Et là, toutes les informations <br> concernant la journée, l'hébergement ...</div>
+	  <div class="col-md-2"><img class="image-fleche image-fleche-bas-haut only-big-screen" src="../img/home/fleche-bas-haut-grande.png"></div>
 	  <div class="col-md-4"></div>
   	  <div class="col-md-3"></div>
 	</div>
 	<div class="row" ng-if="showIGoForm">
 		<div class="col-md-12">
-			<iframe class="iFrameIGoForm" src="https://docs.google.com/forms/d/1tLU0hz_obDyYlK2CX8Ee-_tOLUwbovEeFLlUJIcnyW8/viewform??embedded=true&quot;" frameborder="0" marginheight="0"
+			<iframe class="iFrameIGoForm" src="https://docs.google.com/forms/d/1tLU0hz_obDyYlK2CX8Ee-_tOLUwbovEeFLlUJIcnyW8/viewform?embedded=true" frameborder="0" marginheight="0"
 				 marginwidth="0">Loading...</iframe>
 		</div>
 		
