--- a/src/angular/map/map.html
+++ b/src/angular/map/map.html
@@ -1,6 +1,6 @@
 
 	<script type="text/ng-template" id="searchboxContainer">
-    	<input type="text" placeholder="Recherche" id="searchBox">
+    	<input type="text" placeholder="Recherche" id="searchBox" class="only-big-screen">
 	</script>
 <div id="map">
 
