--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,6 +26,7 @@
     <script src='../../bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
     <script src='../../bower_components/angular-bootstrap/ui-bootstrap.min.js'></script>
     <script src='../../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js'></script>
+    <script src="../../bower_components/angular-md5/angular-md5.min.js"></script>
     <link href="../../bower_components/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet">
     <!-- EOF angular libs -->
 
