--- a/src/angular/home/home.html
+++ b/src/angular/home/home.html
@@ -39,7 +39,7 @@
   	  			Et là, pour nous avertir <br> de votre présence ou absence.
 	  	  	</span>
 	  	  	<span class="only-big-screen">
-	  	  		Et ici, toutes les informations <br> concernant la journée, l'hébergement ...
+	  	  		Et là, toutes les informations <br> concernant la journée, l'hébergement ...
 	  	  	</span>
 	  	  	<!-- EOF attention si modif ici modifier l'autre partie en haut -->
 		</div>
