--- a/src/angular/map/map.html
+++ b/src/angular/map/map.html
@@ -8,7 +8,8 @@
 		bounds='bounds'
 		center='map.center' 
 		zoom='map.zoom'
-	 	options='options'>
+	 	options='options'
+	 	>
 	 	<ui-gmap-markers 
 
 			models="pois" 
