--- a/src/angular/home/home.html
+++ b/src/angular/home/home.html
@@ -8,7 +8,7 @@
 	  <div class="col-md-3"></div>
 	  <div class="col-md-4"></div>
 	  <div class="col-md-2">
-  		<img class="image-fleche image-fleche-haut-bas only-big-screen" src="../img/home/fleche-haut-bas.png">
+  		<img class="image-fleche image-fleche-haut-bas only-big-screen" src="img/home/fleche-haut-bas.png">
 	  </div>
   	  <div class="col-md-3 info-for-btn">
   	  	<!-- BOF attention si modif ici modifier l'autre partie en bas -->
@@ -43,13 +43,13 @@
 	  	  	</span>
 	  	  	<!-- EOF attention si modif ici modifier l'autre partie en haut -->
 		</div>
-	  <div class="col-md-2"><img class="image-fleche image-fleche-bas-haut only-big-screen" src="../img/home/fleche-bas-haut-grande.png"></div>
+	  <div class="col-md-2"><img class="image-fleche image-fleche-bas-haut only-big-screen" src="img/home/fleche-bas-haut-grande.png"></div>
 	  <div class="col-md-4"></div>
   	  <div class="col-md-3"></div>
 	</div>
 	<div class="row" ng-if="iGoFormURLIFrame">
 		<div class="col-md-12">
-			<iframe class="iFrameIGoForm" src="{{iGoFormURLIFrame}}" frameborder="0" marginheight="0"
+			<iframe class="iFrameIGoForm" frameborder="0" marginheight="0"
 				 marginwidth="0">Loading...</iframe>
 		</div>
 		
